refactor: 예외 발생 시 다시 입력받는 코드 추가